unpackaged/main/default/objects/Agreement_Amendment__c/Agreement_Amendment__c.object-meta.xml
<CustomObject>
    <label>Agreement/Amendment</label>
    <nameField>
        <displayFormat>AA - {0}</displayFormat>
        <label>Agreements/Amendment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements/Amendments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>