unpackaged/main/default/objects/Agreement_Amendment__c/fields/Agreement_Amendment_Number__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Amendment_Number__c</fullName>
    <label>Agreement/Amendment Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>