unpackaged/main/default/objects/Agreement_Amendment__c/fields/Agreement_Amendment_Received__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Amendment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement/Amendment Received</label>
    <type>Checkbox</type>
</CustomField>