unpackaged/main/default/objects/Agreement_Amendment__c/fields/Commitment__c.field-meta.xml
<CustomField>
    <fullName>Commitment__c</fullName>
    <label>Commitment</label>
    <referenceTo>Commitment__c</referenceTo>
    <relationshipLabel>Agreements/Amendments</relationshipLabel>
    <relationshipName>Agreement_Amendment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>