unpackaged/main/default/objects/Agreement_Amendment__c/recordTypes/Agreement.recordType-meta.xml
<RecordType>
    <fullName>Agreement</fullName>
    <active>true</active>
    <description>An Agreement is a legal contract indicating commitment from a Limited Partner or an Institution towards a Partnership.</description>
    <label>Agreement</label>
</RecordType>