unpackaged/main/default/objects/Agreement_Amendment__c/recordTypes/Amendment.recordType-meta.xml
<RecordType>
    <fullName>Amendment</fullName>
    <active>true</active>
    <description>An Amendment is a modification to an Agreement from a Limited Partner or an Institution towards a Partnership.</description>
    <label>Amendment</label>
</RecordType>